--- a/assets/css/_partial/_archive/_terms.scss
+++ b/assets/css/_partial/_archive/_terms.scss
@@ -75,80 +75,6 @@
   }
 }
 
-.archive-item {
-  align-items: center;
-  margin-left: 1.5rem;
-}
-
-.archive-item-link {
-  min-width: 10%;
-  overflow: hidden;
-  white-space: nowrap;
-  text-overflow: ellipsis;
-
-  &:hover {
-    color: $global-link-hover-color;
-    background-color: transparent;
-  }
-
-  [theme=dark] & {
-    color: $global-link-color-dark;
-
-    &:hover {
-      color: $global-link-hover-color-dark;
-    }
-  }
-}
-
-.archive-item-date {
-  font-size: .875rem;
-  text-align: left;
-  color: $global-font-secondary-color;
-
-  [theme=dark] & {
-    color: $global-font-secondary-color-dark;
-  }
-}
-
-.archive-timeline {
-  position: relative;
-  overflow: hidden;
-  &::before {
-    content: '';
-    display: inline-block;
-    position: absolute;
-    top: 0;
-    left: 5px;
-    background: $global-font-secondary-color;
-    width: 2px;
-    height: 100%;
-    z-index: 1;
-    [theme=dark] & {
-      background: $global-font-secondary-color-dark;
-    }
-  }
-}
-
-.archive-circle {
-  margin: 10px 0;
-  &::before {
-    content: '';
-    background: $global-font-secondary-color;
-    display: inline-block;
-    position: absolute;
-    top: 42.5%;
-    border: 2px solid $global-background-color;
-    border-radius: 50%;
-    width: .75rem;
-    height: .75rem;
-    z-index: 2;
-    [theme=dark] & {
-      background: $global-font-secondary-color-dark;
-      border-color: $global-background-color-dark;
-    }
-  }
-}
-
 .more-post {
   text-align: right;
 }
